package NYT.NShuffleClient.NProto;

import "yt_proto/yt/client/chunk_client/proto/chunk_spec.proto";
import "yt_proto/yt/core/misc/proto/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqStartShuffle
{
    required string account = 1;
    required int32 partition_count = 2;
    required NYT.NProto.TGuid parent_transaction_id = 3;
    optional string medium = 4;
    optional int32 replication_factor = 5;
}

message TRspStartShuffle
{
    required bytes shuffle_handle = 1; // YSON-serialized TShuffleHandle
}

////////////////////////////////////////////////////////////////////////////////

message TReqRegisterChunks
{
    required bytes shuffle_handle = 1; // YSON-serialized TShuffleHandle
    repeated NYT.NChunkClient.NProto.TChunkSpec chunk_specs = 2;
    optional int32 writer_index = 3;
}

message TRspRegisterChunks
{
}

////////////////////////////////////////////////////////////////////////////////

message TReqFetchChunks
{
    message IndexRange
    {
        required int32 begin = 1;
        required int32 end = 2;
    }

    required bytes shuffle_handle = 1; // YSON-serialized TShuffleHandle
    required int32 partition_index = 2;
    optional IndexRange writer_index_range = 3;
}

message TRspFetchChunks
{
    repeated NYT.NChunkClient.NProto.TChunkSpec chunk_specs = 1;
}
